--- a/codedivision_operators.ipynb
+++ b/codedivision_operators.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "codedivision_operators",
       "provenance": [],
-      "authorship_tag": "ABX9TyNL5UFQ/pUJC1jbUJCRL+av",
+      "authorship_tag": "ABX9TyPHAXv1lXXg3/GwJQlY3SO3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "id": "ixriAp5d6a9E"
       },
       "source": [
-        "**Exercise 1** - multiplication of integers  \n",
+        "### **Exercise 1** - multiplication of integers  \n",
         "Write a function called print_dog_human_age() which will:\n",
         "\n",
         "- ask the user to input their dog's age and assign this to an integer variable called dog_age\n",
@@ -95,7 +95,7 @@
         "id": "El122DL17fff"
       },
       "source": [
-        "**Exercise 2** - BIDMAS  \n",
+        "### **Exercise 2** - BIDMAS  \n",
         "Write a function called calculate_average() which will:\n",
         "\n",
         "- ask the user for 3 seperate numbers, num1, num2, num3\n",
@@ -150,7 +150,7 @@
         "id": "Aiz0H9y89GIZ"
       },
       "source": [
-        "**Exercise 3** - BIDMAS  \n",
+        "### **Exercise 3** - BIDMAS  \n",
         "Write a function called calculate_avg_height() which will:\n",
         "\n",
         "- ask the user to input their height\n",
@@ -199,7 +199,7 @@
         "id": "R4hjtMBK-Cm3"
       },
       "source": [
-        "**Exercise 4** - float and formatting printing  \n",
+        "### **Exercise 4** - float and formatting printing  \n",
         "At the time of writing, the exchange rate from Pounds (£) to Euros (€) is 1.16 (£1 = €1.16).\n",
         "\n",
         "Write a function called convert_currency() which will:\n",
@@ -251,7 +251,7 @@
         "id": "5W1qR9qO-_BS"
       },
       "source": [
-        "**Exercise 5** - rounding  \n",
+        "### **Exercise 5** - rounding  \n",
         "Write a function called calculate_stats() which will: \n",
         "\n",
         "- assign the numbers 3.145, 5.6723 and 9.34 to the variables num1, num2 and num3 respectively\n",
@@ -303,7 +303,7 @@
         "id": "DAeWQBq6AKiW"
       },
       "source": [
-        "**Exercise 6** - calculating volume  \n",
+        "### **Exercise 6** - calculating volume  \n",
         "Bill is moving house. He needs to know how much space his cardboard packing boxes have.\n",
         "\n",
         "Write a function called calculate_volume() which will:\n",
@@ -348,23 +348,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qdLaHyv3Anj6"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "sMmvIvMkA7KK"
       },
       "source": [
-        "**Exercise 7** - calculating with volumes  \n",
+        "### **Exercise 7** - calculating with volumes  \n",
         "Bill needs to work out how many boxes he will need.\n",
         "\n",
         "Building on what you did in the last exercise, write a function called calculate_boxes(base, width, height) which will:\n",
@@ -395,17 +384,6 @@
         "  number_of_boxes = \n",
         "\n",
         "calculate_boxes(3.2, 5.6, 7.8)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TND5fCBaBTOY"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
