--- a/data_types_and_variables.ipynb
+++ b/data_types_and_variables.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "data_types_and_variables.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNX+4QWvPLBZlPl5F+ryCMW",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPkypjcGLi5LrF4SPK969LL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,6 +293,347 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BYmtl7Jmp-CI"
+      },
+      "source": [
+        "## **Data Types and Operators**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ragBHXK9qK3V"
+      },
+      "source": [
+        "### **Exercise 1 - changing data type**\n",
+        "\n",
+        "Write a function called print_details() which will:\n",
+        "\n",
+        "- ask the user their name, age and height in metres\n",
+        "- print the message Hello name you are age years old and height metres tall\n",
+        "\n",
+        "***Remember to specify the correct data type for each input***\n",
+        "\n",
+        "*Test Input:*  \n",
+        "Jean  \n",
+        "52  \n",
+        "2.3\n",
+        "\n",
+        "*Expected Output:*  \n",
+        "Hello Jean you are 52 years old and 2.3 metres tall"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6noZOz11qKRn",
+        "outputId": "f8ffc825-1557-4b85-c7ad-3520790261b1"
+      },
+      "source": [
+        "def print_details():\n",
+        "  name = str(input(\"What is your name? \"))\n",
+        "  age = int(input(\"How old are you? \"))\n",
+        "  height = float(input(\"How tall are you in metres? \"))\n",
+        "  print(\"Hello\", name, \"you are\", age, \"years old and\", height, \"metres tall\")\n",
+        "print_details()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "What is your name? Mark\n",
+            "How old are you? 22\n",
+            "How tall are you in metres? 1.68\n",
+            "Hello Mark you are 22 years old and 1.68 metres tall\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dlnrsy0yrHkV",
+        "outputId": "3bd1aa83-c53e-4390-ff3c-2522bc4f136c"
+      },
+      "source": [
+        "# Same with grammar\n",
+        "def print_details():\n",
+        "  name = str(input(\"What is your name? \"))\n",
+        "  age = int(input(\"How old are you? \"))\n",
+        "  height = float(input(\"How tall are you in metres? \"))\n",
+        "  print(\"Hello,\", name + \".\", \"You are\", age, \"years old and\", height, \"metres tall.\")\n",
+        "print_details()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "What is your name? Kelsey\n",
+            "How old are you? 24\n",
+            "How tall are you in metres? 1.56\n",
+            "Hello, Kelsey. You are 24 years old and 1.56 metres tall.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ODsPM2Q4rkfb"
+      },
+      "source": [
+        "### **Exercise 2 - boolean variables**\n",
+        "\n",
+        "A boolean variable can hold just two values, True or False. This type of variable is hugely valuable in holding onto the state of things. For example, a boolean variable called loggedIn might hold True if the user is loggedIn and False otherwise. This means that at any point while a program is running, it is possible to ask the question \"Is the user logged in?\". The answer will depend on the value of the variable loggedIn.\n",
+        "\n",
+        "Although we will use the values True and False as words, Python stores them as 1 for true and 0 for false.\n",
+        "\n",
+        "To demonstrate this, write a function called **show_trueFalse()** which will:\n",
+        "\n",
+        "- create a variable called **logged_in** and assign it the value True (use the * assignment operator = the same as usual)\n",
+        "- create a variable called **logged_in_as_num** and assign it the value int(True)\n",
+        "- print logged_in and logged_in_as_num\n",
+        "\n",
+        "*Expected output:*  \n",
+        "True 1\n",
+        "\n",
+        "When you have run this, change True to False in both places.\n",
+        "\n",
+        "*Expected output:*  \n",
+        "False 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i_YJ5rQvrWET",
+        "outputId": "edf7d2cf-36a8-4102-cf5b-6ea0bac707ea"
+      },
+      "source": [
+        "# Where logged_in = True and logged_in_as_num = int(True)\n",
+        "def show_trueFalse():\n",
+        "  logged_in = True\n",
+        "  logged_in_as_num = int(True)\n",
+        "  print(logged_in)\n",
+        "  print(logged_in_as_num)\n",
+        "show_trueFalse()"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DRi71fm6sLn5",
+        "outputId": "1325cb30-31e7-4074-94f0-9346a404ff8d"
+      },
+      "source": [
+        "# Where logged_in = False and logged_in_as_num = int(False)\n",
+        "def show_trueFalse():\n",
+        "  logged_in = False\n",
+        "  logged_in_as_num = int(False)\n",
+        "  print(logged_in)\n",
+        "  print(logged_in_as_num)\n",
+        "show_trueFalse()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z_hkMt8ZsrMf"
+      },
+      "source": [
+        "### **Exercise 3 - converting to float to int**\n",
+        "Write a function called count_poundCoins() which will:\n",
+        "\n",
+        "- ask the user to enter an amount in pounds and pence and assign this value to a float variable called pounds_pence\n",
+        "- convert the float variable to int and assign this value to a variable called pound_coins\n",
+        "- print the message Number of pound coins pound_coins\n",
+        "\n",
+        "*Test input:*  \n",
+        "3.48\n",
+        "\n",
+        "*Expected output:*  \n",
+        "Number of pound coins 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XhW9H8cFsnxv",
+        "outputId": "b933524c-e2e2-451c-f67f-cee5bec27c76"
+      },
+      "source": [
+        "def count_poundCoins():\n",
+        "  pounds_pence = float(input(\"Enter an amount of money in pounds and pence: \"))\n",
+        "  pound_coins = int(pounds_pence)\n",
+        "  print(\"Number of pound coins\", pound_coins)\n",
+        "count_poundCoins()"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter an amount of money in pounds and pence: 3.48\n",
+            "Number of pound coins 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ek11xLtstSQp"
+      },
+      "source": [
+        "### **Exercise 4 - converting int to string**\n",
+        "Write a function called format_currency() which will:\n",
+        "\n",
+        "- ask the user to enter a number of pounds and assign this to an integer variable called num_pounds\n",
+        "- convert numPounds to a string and assign it to a variable called pounds\n",
+        "- create a String variable called currency which has a \"£\", pounds, \".00\" joined together\n",
+        "- print the resulting currency, including the £ sign\n",
+        "\n",
+        "*Test input:*  \n",
+        "4\n",
+        "\n",
+        "*Expected output:*  \n",
+        "£4.00"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fosme0jJtM9S",
+        "outputId": "40b6d3c4-64c3-4f1b-d824-b09863c77f97"
+      },
+      "source": [
+        "def format_currency():\n",
+        "  num_pounds = int(input(\"Enter an amount of pounds: \"))\n",
+        "  pounds = str(num_pounds)\n",
+        "  print(\"£\" + pounds + \".00\") # Combining strings\n",
+        "format_currency()"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter an amount of pounds: 4\n",
+            "£4.00\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JeDIWR1ft9Mn"
+      },
+      "source": [
+        "### **Exercise 5 - area of a circle**\n",
+        "Write a function called calculate_area() which will:\n",
+        "\n",
+        "- ask the user to enter the radius of a circle (which could be a float or an int)\n",
+        "- create a variable called pi and assign it the value 3.14159\n",
+        "- calculate the area of the circle (pi radius radius)\n",
+        "- print the area of the circle to 2 decimal places.\n",
+        "\n",
+        "*Test input:*  \n",
+        "5\n",
+        "\n",
+        "*Expected output:*  \n",
+        "78.54"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nf1x8IWNtwSV",
+        "outputId": "37b20b2a-cbab-4398-91f7-71de9b2ad962"
+      },
+      "source": [
+        "def calculate_area():\n",
+        "  radius = int(input(\"Enter the radius of a circle: \"))\n",
+        "  pi = 3.14159\n",
+        "  area = pi * radius * radius\n",
+        "  print(round(area, ndigits=2))\n",
+        "calculate_area()"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the radius of a circle: 5\n",
+            "78.54\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GJLH-k2mufh1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
