--- a/operators.ipynb
+++ b/operators.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "operators",
       "provenance": [],
-      "authorship_tag": "ABX9TyP4v0lJbMbE9WLM2GzEsc4R",
+      "authorship_tag": "ABX9TyPeKSnl2o9du0cXNGM/bXc4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74vSYvXP6SiC",
-        "outputId": "a7928cd0-072b-4f0d-dbb8-e7820cbbee56"
+        "outputId": "bc600e64-511d-4e90-f4c8-af0a5f2f76be"
       },
       "source": [
         "def print_dog_human_age():\n",
@@ -59,7 +59,7 @@
         "  print(dog_human_age)\n",
         "print_dog_human_age()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CiOAXk1g69Ox",
-        "outputId": "ac0d04d7-861d-4ed7-b89a-22fab488c474"
+        "outputId": "0d1bc43b-2a66-4b1a-a8a4-35f5b4303e8e"
       },
       "source": [
         "def calculate_average():\n",
@@ -112,7 +112,7 @@
         "  print(round(average_num, ndigits=2)) # set ndigits to 2 for 2 decimal places\n",
         "calculate_average()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,11 +151,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 555
+          "base_uri": "https://localhost:8080/"
         },
         "id": "MiddhxkH9LDm",
-        "outputId": "332d3cc4-1f75-4aea-e5c8-825a8355e8ab"
+        "outputId": "20836ab1-f5aa-44ed-b875-e4fa00dc804e"
       },
       "source": [
         "def calculate_avg_height():\n",
@@ -164,31 +163,15 @@
         "  print(height_centimeters,\"cm\")\n",
         "calculate_avg_height()"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    582\u001b[0m         \"\"\"\n\u001b[0;32m--> 583\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    584\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-c08fe18ece9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mheight_centimeters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight_centimeters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"cm\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcalculate_avg_height\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-1-c08fe18ece9e>\u001b[0m in \u001b[0;36mcalculate_avg_height\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcalculate_avg_height\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mheight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"What is your height in meters? \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mheight_centimeters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight_centimeters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"cm\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcalculate_avg_height\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
+          "output_type": "stream",
+          "text": [
+            "What is your height in meters? 1.67\n",
+            "167 cm\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -223,22 +206,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oAaE1Dn29rck",
-        "outputId": "cfe25684-f7dd-4694-a9e3-222e891a33bb"
+        "outputId": "385f1e1c-9b45-4034-cace-b9c02b003edf"
       },
       "source": [
         "def convert_currency():\n",
         "  pounds = float(input(\"Input an amount in pounds (do not enter the £ sign): \"))\n",
         "  euros = pounds * 1.16 # Exchange rate is £1 = $1.16\n",
-        "  print(round(euros, ndigits=2))\n",
+        "  print(\"€\" + str(round(euros, ndigits=2)))\n",
         "convert_currency()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Input an amount in pounds (do not enter the £ sign): 60\n",
-            "69.6\n"
+            "€69.6\n"
           ],
           "name": "stdout"
         }
@@ -273,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pWTsDbsR-p4O",
-        "outputId": "6365b14f-b01f-4ac5-8122-ce40c7094208"
+        "outputId": "d3e2f36a-d821-49b0-c917-530c4cf7f2e3"
       },
       "source": [
         "def calculate_stats():\n",
@@ -285,7 +268,7 @@
         "  print(\"The total number is\", total_num, \"and the average number is\", average_num,\".\")\n",
         "calculate_stats()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +307,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BNi_BZRE_hkB",
-        "outputId": "5b743332-6c9a-4b18-e750-7560768ab39a"
+        "outputId": "7874c333-965f-4130-cc9f-693b240150e4"
       },
       "source": [
         "def calculate_volume():\n",
@@ -335,7 +318,7 @@
         "  print(box_volume)\n",
         "calculate_volume()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,19 +356,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CAdMOZWPBBOw"
+        "id": "CAdMOZWPBBOw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "474295c6-2477-4aeb-f053-5875c8e0024b"
       },
       "source": [
         "def calculate_boxes(base, width, height):\n",
         "  # add your code below here to calculate the boxVolume, ask for totalVolume and calculate number of boxes\n",
         "  box_volume = base * width * height\n",
-        "  total_volume = input(\"What is the volume of your stuff? \")\n",
-        "  number_of_boxes = \n",
-        "\n",
+        "  total_volume = int(input(\"What is the volume of your stuff? \"))\n",
+        "  number_of_boxes = int((total_volume // box_volume) + 1)\n",
+        "  print(\"Bill will need\", number_of_boxes, \"boxes to pack his things.\")\n",
         "calculate_boxes(3.2, 5.6, 7.8)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "What is the volume of your stuff? 1500\n",
+            "Bill will need 11 boxes to pack his things.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -419,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sca6uo_msxNe",
-        "outputId": "7a4b0a4d-fa2b-48ce-b3d6-c9f8e9f9d78d"
+        "outputId": "841c4c88-baf3-4734-bc46-6018a2e50f42"
       },
       "source": [
         "def calculate_parcel_weight():\n",
@@ -431,7 +427,7 @@
         "  print(parcel_weight + \"kg\")\n",
         "calculate_parcel_weight()"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +473,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HnfxH1JrvDky",
-        "outputId": "742059da-f2aa-4558-c3a4-cf2af26f5ef1"
+        "outputId": "96bb660a-d2fe-45c1-f7fb-2b79c0b70795"
       },
       "source": [
         "# Afternoon time\n",
@@ -489,7 +485,7 @@
         "  print(\"It is\", minutes, \"minutes past\", hour, \"PM\")\n",
         "get_pm_minutes()"
       ],
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +504,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "puXCMafyxG29",
-        "outputId": "e3ddbae0-27e4-443b-f887-c72f4475c894"
+        "outputId": "45dba74a-ebdc-41f0-cb85-81c271777837"
       },
       "source": [
         "# Monring time\n",
@@ -519,7 +515,7 @@
         "  print(\"It is\", minutes, \"minutes past\", hour, \"AM\")\n",
         "get_am_minutes()"
       ],
-      "execution_count": 15,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +553,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6MQsz89Zxwn_",
-        "outputId": "9f4aa603-8040-4d2c-c064-5f50cf2dc732"
+        "outputId": "6966febc-d173-4432-ad04-f0f8425adfa9"
       },
       "source": [
         "def calculate_tins(height, width, depth):\n",
@@ -570,7 +566,7 @@
         "  print(number_of_tins)\n",
         "calculate_tins(24, 50, 18)  "
       ],
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,6 +576,17 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nUuNsx4S333P"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
